--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.11.1",
     "pino": "^8.20.0",
     "uuid": "^9.0.0"
+    "pino-http": "^8.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
