Fix formatting issue in package.json

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.1",
     "pino": "^8.20.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
     "pino-http": "^8.6.0"
   },
   "devDependencies": {
